--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: github_app
 description: A new Flutter project.
 
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
@@ -12,23 +11,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  oauth2: ^2.0.0
   flutter_secure_storage: ^5.0.2
-  dartz: ^0.10.0-nullsafety.1
-  dio: ^4.0.0
+  oauth2: ^2.0.0
+  dio: ^4.0.4
   flutter_hooks: ^0.18.1
-  hooks_riverpod: ^1.0.0
+  hooks_riverpod: ^1.0.1
   freezed_annotation: ^1.0.0
   webview_flutter: ^2.3.1
   flash: ^2.0.3
   auto_route: ^3.1.3
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^1.0.0
-  build_runner: ^2.1.5  
-  lint: ^1.7.2
-flutter:
+  build_runner: ^2.1.5
+  lint: ^1.7.2 
 
+flutter:
   uses-material-design: true
