--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/*.freezed.dart": true,
-        "**/*.g.dart": false
+        "**/*.g.dart": false,
+        "app_router.gr.dart": true
     },
     "explorerExclude.backup": null
 }
