--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   freezed: ^1.0.0
   build_runner: ^2.1.5
   lint: ^1.7.2 
+  auto_route_generator: ^3.2.3
 
 flutter:
   uses-material-design: true
