--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flash: ^2.0.3
   auto_route: ^3.1.3
   dartz: ^0.10.1
+  material_design_icons_flutter: ^5.0.6595
 
 
 dev_dependencies:
