--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   auto_route: ^3.1.3
   dartz: ^0.10.1
   material_design_icons_flutter: ^5.0.6595
+  json_annotation: ^4.6.0
+  sembast: ^3.3.0
+  path: ^1.8.0
+  path_provider: ^2.0.11
 
 
 dev_dependencies:
@@ -31,6 +35,7 @@ dev_dependencies:
   build_runner: ^2.1.5
   lint: ^1.7.2 
   auto_route_generator: ^3.2.3
+  json_serializable: ^6.3.1
 
 flutter:
   uses-material-design: true
